--- a/A1_Supervised/main2_SingleLayer.ipynb
+++ b/A1_Supervised/main2_SingleLayer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +90,9 @@
     "    it takes the input data and calculates the output for each sample.\n",
     "\n",
     "    Args:\n",
-    "        X (array): Input samples.\n",
-    "        W (array): Neural network weights.\n",
-    "        B (array): Neural network biases.\n",
+    "        X (array): Input samples. Observations by row. Dim [N x n_features]\n",
+    "        W (array): Neural network weights. Dim [n_classes x n_features]\n",
+    "        B (array): Neural network biases. Dim [n_classes x 1]\n",
     "\n",
     "    Returns:\n",
     "        Y (array): Output for each sample and class.\n",
@@ -103,7 +103,7 @@
     "    # === Your code here =========================\n",
     "    # --------------------------------------------\n",
     "    \n",
-    "    Y = ???\n",
+    "    Y = (W @ X.T + B).T if useTanhOutput == False else (np.tanh(W @ X.T + B)).T\n",
     "        \n",
     "    # ============================================\n",
     "        \n",
@@ -111,6 +111,40 @@
     "    L = np.argmax(Y, axis=1)\n",
     "    \n",
     "    return Y, L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         1.         0.99999977]\n",
+      " [1.         1.         1.        ]\n",
+      " [1.         1.         1.        ]\n",
+      " [1.         1.         0.99999977]\n",
+      " [1.         1.         1.        ]]\n",
+      "[1 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test Cell\n",
+    "X = np.array([[1,2], [6,0], [4,3], [2,1], [3,1]]) # Dim [5 observations x 2 features]\n",
+    "\n",
+    "W = np.array([[4,1], [3,4], [2,2]]) # Dim [3 classes x 2 features]\n",
+    "\n",
+    "B = np.array([[4], [2], [2]]) # Dim [3 classes x 1]\n",
+    "\n",
+    "Y, L = forward(X, W, B, useTanhOutput=True)\n",
+    "\n",
+    "print(Y)\n",
+    "print(L)\n",
+    "\n",
+    "D = np.array([[0,1,2], [0,1,2], [0,2,1], [1,0,2], [0,1,0]])"
    ]
   },
   {
@@ -124,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +186,71 @@
     "    # --------------------------------------------\n",
     "    # === Your code here =========================\n",
     "    # --------------------------------------------\n",
+    "\n",
+    "    # Initialize gradient calculations\n",
+    "    GradW = np.full((X.shape[1],Y.shape[1]), 0)\n",
+    "    GradB = np.full((1,Y.shape[1]), 0)\n",
+    "\n",
+    "    #print(\"GradW shape:\", GradW.shape)\n",
+    "    #print(\"GradB shape:\", GradB.shape)\n",
+    "\n",
+    "    # Calculate gradients for each observation\n",
+    "    for observation, output, target in zip(X, Y, D):\n",
+    "        observation = np.array([observation])\n",
+    "        #print(\"observation:\", observation)\n",
     "        \n",
-    "    # Calculate gradients\n",
-    "    GradW = ???\n",
-    "    GradB = ???\n",
+    "        if useTanhOutput == True:\n",
+    "            S = np.array([[(output_j - target_j) * (1-output_j**2) for output_j, target_j in zip(output, target)]])\n",
+    "        else:\n",
+    "            S = np.array([[(output_j - target_j) *        1        for output_j, target_j in zip(output, target)]])\n",
+    "        \n",
+    "        #print(\"Obs shape\", observation.shape)\n",
+    "        #print(\"S shape\", S.shape)\n",
+    "        \n",
+    "        # Will not act as expected (maybe += is not defined for arrays?)\n",
+    "        #GradW += 2 * np.array([observation]).T @ S\n",
+    "        #GradB += 2 * S\n",
+    "\n",
+    "        # Works!\n",
+    "        GradW = GradW + 2 * observation.T @ S\n",
+    "        GradB = GradB + 2 * S\n",
+    "    \n",
+    "    GradW = GradW / N\n",
+    "    GradB = GradB / N\n",
+    "\n",
     "    \n",
     "    # ============================================\n",
     "    \n",
     "    return GradW, GradB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 3.29785407e-09,  1.20804344e-10, -5.30281939e-07],\n",
+       "        [ 6.59569436e-09,  6.04021721e-11, -5.36870993e-07]]),\n",
+       " array([[ 3.29784856e-09,  6.04021721e-11, -3.56815820e-07]]))"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test Cell\n",
+    "#S_test = np.array([[(output_j - target_j) * (1-output_j**2) for output_j, target_j in zip(Y[0], D[0])]])\n",
+    "\n",
+    "#X[0].T @ S_test\n",
+    "\n",
+    "\n",
+    "#Y = forward(X, W, B, useTanhOutput=True)\n",
+    "backward(W, B, X, Y, D, useTanhOutput=True)"
    ]
   },
   {
@@ -173,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,8 +291,8 @@
     "    # === Your code here =========================\n",
     "    # --------------------------------------------\n",
     "    \n",
-    "    W = ???\n",
-    "    B = ???\n",
+    "    W = W - LR * GradW\n",
+    "    B = B - LR * GradB\n",
     "    \n",
     "    # ============================================\n",
     "    \n",
@@ -220,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
