trying to figure out inner/outer loop

--- a/A1_Supervised/main1_kNN.ipynb
+++ b/A1_Supervised/main1_kNN.ipynb
@@ -666,14 +666,11 @@
     "    for k in range(kMax):\n",
     "        # Use getCVSplit to combine bins for training and validation data\n",
     "        XTrain, _, LTrain, XVal, _, LVal = getCVSplit(XBins, None, LBins, len(XBins), k)\n",
-    "        \n",
-    "        LPredVal = kNN(XVal, k, XTrain, LTrain)\n",
-    "        accVal = calcAccuracy(LPredVal, LVal)\n",
     "    \n",
-    "        for ???\n",
-    "\n",
+    "        for n in len(XBins):\n",
     "            # Classify validation data using kNN\n",
-    "            ...\n",
+    "            LPredVal = kNN(XVal, k, XTrain, LTrain)\n",
+    "            accVal = calcAccuracy(LPredVal, LVal)    \n",
     "            \n",
     "            # ... and store resulting accuracy in the accs matrix\n",
     "            ...\n",
