Worked on single layer NN

--- a/A1_Supervised/main2_SingleLayer.ipynb
+++ b/A1_Supervised/main2_SingleLayer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,9 @@
     "    # --------------------------------------------\n",
     "    # === Your code here =========================\n",
     "    # --------------------------------------------\n",
-    "    \n",
+    "    print(\"X shape:\", X.shape)\n",
+    "    print(\"W shape:\", W.shape)\n",
+    "    print(\"B shape:\", B.shape)\n",
     "    Y = (W @ X.T + B).T if useTanhOutput == False else (np.tanh(W @ X.T + B)).T\n",
     "        \n",
     "    # ============================================\n",
@@ -111,40 +113,6 @@
     "    L = np.argmax(Y, axis=1)\n",
     "    \n",
     "    return Y, L"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.         1.         0.99999977]\n",
-      " [1.         1.         1.        ]\n",
-      " [1.         1.         1.        ]\n",
-      " [1.         1.         0.99999977]\n",
-      " [1.         1.         1.        ]]\n",
-      "[1 0 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test Cell\n",
-    "X = np.array([[1,2], [6,0], [4,3], [2,1], [3,1]]) # Dim [5 observations x 2 features]\n",
-    "\n",
-    "W = np.array([[4,1], [3,4], [2,2]]) # Dim [3 classes x 2 features]\n",
-    "\n",
-    "B = np.array([[4], [2], [2]]) # Dim [3 classes x 1]\n",
-    "\n",
-    "Y, L = forward(X, W, B, useTanhOutput=True)\n",
-    "\n",
-    "print(Y)\n",
-    "print(L)\n",
-    "\n",
-    "D = np.array([[0,1,2], [0,1,2], [0,2,1], [1,0,2], [0,1,0]])"
    ]
   },
   {
@@ -158,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,8 +259,13 @@
     "    # === Your code here =========================\n",
     "    # --------------------------------------------\n",
     "    \n",
+    "    print(\"(Update) B shape (pre udate):\", B.shape)\n",
+    "\n",
     "    W = W - LR * GradW\n",
     "    B = B - LR * GradB\n",
+    "\n",
+    "    print(\"(Update) B shape (post update):\", B.shape)\n",
+    "    print(\"(Update) GradB:\", GradB.shape)\n",
     "    \n",
     "    # ============================================\n",
     "    \n",
@@ -311,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select and load dataset\n",
-    "datasetNr = 1\n",
+    "datasetNr = 3\n",
     "X, D, L = loadDataset(datasetNr)\n",
     "\n",
     "# Split data into training and test sets\n",
@@ -441,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +422,7 @@
     "    # Compute mean and std\n",
     "    m = X.mean(axis=0)\n",
     "    s = X.std(axis=0)\n",
-    "    # Prevent division by 0 is feature has no variance\n",
+    "    # Prevent division by 0 if feature has no variance\n",
     "    s[s == 0] = 1\n",
     "    # Return normalized data\n",
     "    return (X - m) / s"
@@ -464,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,19 +456,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# --------------------------------------------\n",
     "# === Your code here ========================= \n",
     "# --------------------------------------------\n",
-    "nInputs  = ???\n",
-    "nClasses = ???\n",
+    "nInputs  = X.shape[1]\n",
+    "nClasses = len(set(L))\n",
     "\n",
-    "W0 = ???\n",
-    "B0 = ???\n",
+    "# Import random function\n",
+    "from random import random\n",
+    "\n",
+    "#W0 = np.array([random() for i in range(nInputs * nClasses)])\n",
+    "W0 = np.array([[1,2],[3,4], [5,6]])\n",
+    "\n",
+    "#B0 = np.full((nClasses), 0)\n",
+    "B0 = np.array([[1], [2], [3]])\n",
+    "\n",
     "# ============================================"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TESTING\n",
+    "W0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (1700, 2)\n",
+      "W shape: (2, 2)\n",
+      "B shape: (2, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 4.3681184 ,  9.94615575],\n",
+       "        [ 3.4420399 ,  8.11881518],\n",
+       "        [ 1.52973558,  2.21733181],\n",
+       "        ...,\n",
+       "        [-0.6786925 , -0.96567287],\n",
+       "        [ 0.31767456,  1.8416953 ],\n",
+       "        [ 0.1068501 ,  1.03546455]]),\n",
+       " array([1, 1, 1, ..., 0, 1, 1], dtype=int64))"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TESTING\n",
+    "\n",
+    "#print(XTrainNorm.shape)\n",
+    "\n",
+    "#print((W0 @ XTrainNorm.T + B0).T if False else (np.tanh(W0 @ XTrainNorm.T + B0)).T)\n",
+    "\n",
+    "forward(XTrainNorm, W=W0, B = B0)"
    ]
   },
   {
@@ -507,9 +551,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (1700, 2)\n",
+      "W shape: (3, 2)\n",
+      "B shape: (3, 1)\n",
+      "X shape: (300, 2)\n",
+      "W shape: (3, 2)\n",
+      "B shape: (3, 1)\n",
+      "(Update) B shape (pre udate): (3, 1)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[84], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m1000\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlearningRate\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.05\u001b[39m}\n\u001b[1;32m----> 2\u001b[0m W, B, metrics \u001b[38;5;241m=\u001b[39m \u001b[43mtrainSingleLayer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXTrainNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXTestNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mplotProgress\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[5], line 67\u001b[0m, in \u001b[0;36mtrainSingleLayer\u001b[1;34m(XTrain, DTrain, XTest, DTest, W0, B0, params, plotProgress)\u001b[0m\n\u001b[0;32m     65\u001b[0m GradW, GradB \u001b[38;5;241m=\u001b[39m backward(W, B, XTrain, YTrain, DTrain, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     66\u001b[0m \u001b[38;5;66;03m# ... and update weights\u001b[39;00m\n\u001b[1;32m---> 67\u001b[0m W, B \u001b[38;5;241m=\u001b[39m \u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGradW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mGradB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     69\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[0;32m     70\u001b[0m \n\u001b[0;32m     71\u001b[0m \u001b[38;5;66;03m# Evaluate errors\u001b[39;00m\n\u001b[0;32m     72\u001b[0m YTrain, LTrainPred \u001b[38;5;241m=\u001b[39m forward(XTrain, W, B, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "Cell \u001b[1;32mIn[69], line 26\u001b[0m, in \u001b[0;36mupdate\u001b[1;34m(W, B, GradW, GradB, params)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# === Your code here =========================\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(Update) B shape (pre udate):\u001b[39m\u001b[38;5;124m\"\u001b[39m, B\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m---> 26\u001b[0m W \u001b[38;5;241m=\u001b[39m \u001b[43mW\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mLR\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mGradW\u001b[49m\n\u001b[0;32m     27\u001b[0m B \u001b[38;5;241m=\u001b[39m B \u001b[38;5;241m-\u001b[39m LR \u001b[38;5;241m*\u001b[39m GradB\n\u001b[0;32m     29\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(Update) B shape (post update):\u001b[39m\u001b[38;5;124m\"\u001b[39m, B\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (2,3) "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2000x800 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "params = {\"epochs\": 1000, \"learningRate\": 0.05}\n",
     "W, B, metrics = trainSingleLayer(XTrainNorm, DTrain, XTestNorm, DTest, W0, B0, params, plotProgress=True)"
