Worked on the multilayer
(Simon and Marijn) Implemented forward, backward and update functions for the multilayer neural network in Lab 1. It does not currently run, and likely contains some kind of bug.

--- a/A1_Supervised/main3_MultiLayer.ipynb
+++ b/A1_Supervised/main3_MultiLayer.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jorst\\AppData\\Roaming\\Python\\Python310\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "# Automatically reload modules when changed\n",
     "%reload_ext autoreload\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +104,9 @@
     "    # === Your code here ========================= \n",
     "    # --------------------------------------------\n",
     "    \n",
+    "    U = np.tanh(X @ W1 + B1) if useTanhOutput else X @ W1 + B1\n",
     "    \n",
+    "    Y = np.tanh(U @ W2 + B2) if useTanhOutput else U @ W2 + B2\n",
     "    \n",
     "    # ============================================\n",
     "    \n",
@@ -116,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +163,12 @@
     "    # --------------------------------------------\n",
     "    \n",
     "    # Gradient for the output layer\n",
-    "    GradW2 = ???\n",
-    "    GradB2 = ???\n",
+    "    GradW2 = 2 * U.T @ (Y - D) * ((1 - Y**2) if useTanhOutput else 1)\n",
+    "    GradB2 = 2 * (Y - D) * ((1 - Y**2) if useTanhOutput else 1)\n",
     "\n",
     "    # And the input layer\n",
-    "    GradW1 = ???\n",
-    "    GradB1 = ???\n",
+    "    GradW1 = 2 * X.T @ (((Y - D) @ W1.T) * (1 - U**2))\n",
+    "    GradB1 = 2 * (Y - D) * ((1 - Y**2) if useTanhOutput else 1) @ W1.T * (1 - U**2)\n",
     "    \n",
     "    # ============================================\n",
     "    \n",
@@ -175,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,10 +229,10 @@
     "    # --------------------------------------------\n",
     "    \n",
     "    # Update weights\n",
-    "    W1 = ???\n",
-    "    B1 = ???\n",
-    "    W2 = ???\n",
-    "    B2 = ???\n",
+    "    W1 = W1 - LR * GradW1\n",
+    "    B1 = B1 - LR * GradB1\n",
+    "    W2 = W2 - LR * GradW2\n",
+    "    B2 = B2 - LR * GradB2\n",
     "    \n",
     "    # Uncomment this is you are working on the optional task on momentum.\n",
     "    # params[\"PrevGradW1\"] = ???\n",
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,23 +476,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 10 is different from 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m10\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlearningRate\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.01\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnormalize\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m}\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[43mtrainMultiLayerOnDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[7], line 28\u001b[0m, in \u001b[0;36mtrainMultiLayerOnDataset\u001b[1;34m(datasetNr, testSplit, W1_0, B1_0, W2_0, B2_0, params)\u001b[0m\n\u001b[0;32m     25\u001b[0m     XTestNorm  \u001b[38;5;241m=\u001b[39m XTest\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Train network\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m W1, B1, W2, B2, metrics \u001b[38;5;241m=\u001b[39m \u001b[43mtrainMultiLayer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXTrainNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXTestNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Predict classes on test set\u001b[39;00m\n\u001b[0;32m     31\u001b[0m LPredTrain \u001b[38;5;241m=\u001b[39m forward(XTrainNorm, W1, B1, W2, B2, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m])[\u001b[38;5;241m1\u001b[39m]\n",
+      "Cell \u001b[1;32mIn[5], line 76\u001b[0m, in \u001b[0;36mtrainMultiLayer\u001b[1;34m(XTrain, DTrain, XTest, DTest, W1_0, B1_0, W2_0, B2_0, params)\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[38;5;66;03m# Training loop\u001b[39;00m\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     69\u001b[0m     \n\u001b[0;32m     70\u001b[0m     \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     74\u001b[0m     \n\u001b[0;32m     75\u001b[0m     \u001b[38;5;66;03m# Compute gradients...\u001b[39;00m\n\u001b[1;32m---> 76\u001b[0m     GradW1, GradB1, GradW2, GradB2 \u001b[38;5;241m=\u001b[39m \u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mW1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mUTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mYTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43museTanhOutput\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     77\u001b[0m     \u001b[38;5;66;03m# ... and update weights\u001b[39;00m\n\u001b[0;32m     78\u001b[0m     W1, B1, W2, B2 \u001b[38;5;241m=\u001b[39m update(W1, B1, W2, B2, GradW1, GradB1, GradW2, GradB2, params)\n",
+      "Cell \u001b[1;32mIn[3], line 37\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(W1, B1, W2, B2, X, U, Y, D, useTanhOutput)\u001b[0m\n\u001b[0;32m     34\u001b[0m GradB2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (Y \u001b[38;5;241m-\u001b[39m D) \u001b[38;5;241m*\u001b[39m ((\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m Y\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m useTanhOutput \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     36\u001b[0m \u001b[38;5;66;03m# And the input layer\u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m GradW1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m X\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m ((\u001b[43m(\u001b[49m\u001b[43mY\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mD\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mW1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m) \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m U\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m     38\u001b[0m GradB1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m (Y \u001b[38;5;241m-\u001b[39m D) \u001b[38;5;241m*\u001b[39m ((\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m Y\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m useTanhOutput \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m@\u001b[39m W1\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m*\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m U\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 10 is different from 2)"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 2000x800 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --------------------------------------------\n",
     "# === Your code here ========================= \n",
     "# --------------------------------------------\n",
-    "nInputs  = ???\n",
-    "nClasses = ???\n",
-    "nHidden  = ???\n",
+    "nInputs  = 2\n",
+    "nClasses = 2\n",
+    "nHidden  = 10\n",
     "\n",
-    "W1_0 = ???\n",
-    "B1_0 = ???\n",
-    "W2_0 = ???\n",
-    "B2_0 = ???\n",
+    "W1_0 = np.full((nInputs, nHidden), 123)\n",
+    "B1_0 = np.full((1, nHidden), 123)\n",
+    "W2_0 = np.full((nHidden, nClasses), 123)\n",
+    "B2_0 = np.full((1, nClasses), 123)\n",
     "\n",
-    "params = {\"epochs\": ???, \"learningRate\": ???, \"normalize\": False, \"useTanhOutput\": False}\n",
+    "params = {\"epochs\": 10, \"learningRate\": 0.01, \"normalize\": False, \"useTanhOutput\": False}\n",
     "# ============================================\n",
     "\n",
     "trainMultiLayerOnDataset(1, 0.15, W1_0, B1_0, W2_0, B2_0, params)"
@@ -703,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6 (default, Oct 18 2022, 12:41:40) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
