Included random weights in multilayer in Lab 1
Apparently there is a function np.random.rand() which creates numpy arrays with given dimension filled with random elements. Very convenient!

--- a/A1_Supervised/main3_MultiLayer.ipynb
+++ b/A1_Supervised/main3_MultiLayer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,45 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Just created Gradients:\n",
-      "GradW1 shape: (2, 11)\n",
-      "GradW2 shape: (11, 2)\n",
-      "GradB1 shape: (1, 11)\n",
-      "GradB2 shape: (1, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "        [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]),\n",
-       " array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]]),\n",
-       " array([[0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0],\n",
-       "        [0, 0]]),\n",
-       " array([[0, 0]]))"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TEST CELL\n",
     "\n",
@@ -222,7 +186,7 @@
     "#nClasses = 2\n",
     "#nHidden  = 11\n",
     "\n",
-    "nObservations = 19\n",
+    "#nObservations = 19\n",
     "\n",
     "#W1_0 = np.full((nInputs, nHidden), 123)\n",
     "#B1_0 = np.full((1, nHidden), 123)\n",
@@ -248,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,50 +508,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Just created Gradients:\n",
-      "GradB1 shape: (1700, 10)\n",
-      "GradB2 shape: (1700, 2)\n",
-      "About to update parameter weights.\n",
-      "W1 shape: (2, 10) \n",
-      "B1 shape: (1, 10) \n",
-      "w2 shape: (10, 2) \n",
-      "B2 shape: (1, 2)\n",
-      "Updated weight shapes:\n",
-      "W1 shape: (2, 10) \n",
-      "B1 shape: (1700, 10) \n",
-      "w2 shape: (10, 2) \n",
-      "B2 shape: (1700, 2)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (300,2) (1700,2) ",
+     "ename": "TypeError",
+     "evalue": "'tuple' object cannot be interpreted as an integer",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepochs\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m10\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlearningRate\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m0.01\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnormalize\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28;01mFalse\u001b[39;00m}\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[43mtrainMultiLayerOnDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[56], line 28\u001b[0m, in \u001b[0;36mtrainMultiLayerOnDataset\u001b[1;34m(datasetNr, testSplit, W1_0, B1_0, W2_0, B2_0, params)\u001b[0m\n\u001b[0;32m     25\u001b[0m     XTestNorm  \u001b[38;5;241m=\u001b[39m XTest\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Train network\u001b[39;00m\n\u001b[1;32m---> 28\u001b[0m W1, B1, W2, B2, metrics \u001b[38;5;241m=\u001b[39m \u001b[43mtrainMultiLayer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXTrainNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXTestNorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mDTest\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2_0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Predict classes on test set\u001b[39;00m\n\u001b[0;32m     31\u001b[0m LPredTrain \u001b[38;5;241m=\u001b[39m forward(XTrainNorm, W1, B1, W2, B2, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m])[\u001b[38;5;241m1\u001b[39m]\n",
-      "Cell \u001b[1;32mIn[54], line 84\u001b[0m, in \u001b[0;36mtrainMultiLayer\u001b[1;34m(XTrain, DTrain, XTest, DTest, W1_0, B1_0, W2_0, B2_0, params)\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \n\u001b[0;32m     82\u001b[0m \u001b[38;5;66;03m# Evaluate errors\u001b[39;00m\n\u001b[0;32m     83\u001b[0m YTrain, LTrainPred, UTrain \u001b[38;5;241m=\u001b[39m forward(XTrain, W1, B1, W2, B2, params[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124museTanhOutput\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m---> 84\u001b[0m YTest , LTestPred , _      \u001b[38;5;241m=\u001b[39m \u001b[43mforward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXTest\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mB2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43museTanhOutput\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     85\u001b[0m metrics[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlossTrain\u001b[39m\u001b[38;5;124m\"\u001b[39m][n] \u001b[38;5;241m=\u001b[39m ((YTrain \u001b[38;5;241m-\u001b[39m DTrain)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\n\u001b[0;32m     86\u001b[0m metrics[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlossTest\u001b[39m\u001b[38;5;124m\"\u001b[39m][n]  \u001b[38;5;241m=\u001b[39m ((YTest  \u001b[38;5;241m-\u001b[39m DTest )\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\n",
-      "Cell \u001b[1;32mIn[51], line 23\u001b[0m, in \u001b[0;36mforward\u001b[1;34m(X, W1, B1, W2, B2, useTanhOutput)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;66;03m# === Your code here ========================= \u001b[39;00m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# --------------------------------------------\u001b[39;00m\n\u001b[0;32m     21\u001b[0m U \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mtanh(X \u001b[38;5;241m@\u001b[39m W1)\u001b[38;5;66;03m# + B1)\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m Y \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mtanh(U \u001b[38;5;241m@\u001b[39m W2 \u001b[38;5;241m+\u001b[39m B2) \u001b[38;5;28;01mif\u001b[39;00m useTanhOutput \u001b[38;5;28;01melse\u001b[39;00m \u001b[43mU\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m@\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mW2\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mB2\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# ============================================\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Calculate labels\u001b[39;00m\n\u001b[0;32m     28\u001b[0m L \u001b[38;5;241m=\u001b[39m Y\u001b[38;5;241m.\u001b[39margmax(axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (300,2) (1700,2) "
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[79], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m nClasses \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\n\u001b[0;32m      6\u001b[0m nHidden  \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m----> 8\u001b[0m W1_0 \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrand\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnInputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnHidden\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m B1_0 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand((\u001b[38;5;241m1\u001b[39m, nHidden))\n\u001b[0;32m     10\u001b[0m W2_0 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrand((nHidden, nClasses))\n",
+      "File \u001b[1;32mnumpy\\\\random\\\\mtrand.pyx:1219\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.rand\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mnumpy\\\\random\\\\mtrand.pyx:437\u001b[0m, in \u001b[0;36mnumpy.random.mtrand.RandomState.random_sample\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32m_common.pyx:307\u001b[0m, in \u001b[0;36mnumpy.random._common.double_fill\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object cannot be interpreted as an integer"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 2000x800 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -598,10 +534,10 @@
     "nClasses = 2\n",
     "nHidden  = 10\n",
     "\n",
-    "W1_0 = np.full((nInputs, nHidden), 123)\n",
-    "B1_0 = np.full((1, nHidden), 123)\n",
-    "W2_0 = np.full((nHidden, nClasses), 123)\n",
-    "B2_0 = np.full((1, nClasses), 123)\n",
+    "W1_0 = np.random.rand(nInputs, nHidden)\n",
+    "B1_0 = np.random.rand(1, nHidden)\n",
+    "W2_0 = np.random.rand(nHidden, nClasses)\n",
+    "B2_0 = np.random.rand(1, nClasses)\n",
     "\n",
     "params = {\"epochs\": 10, \"learningRate\": 0.01, \"normalize\": False, \"useTanhOutput\": False}\n",
     "# ============================================\n",
@@ -636,9 +572,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2503895972.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[78], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    nInputs  = ???\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# --------------------------------------------\n",
     "# === Your code here ========================= \n",
