AdaBoost finished, L1 multilayer finished and added some things to reinforcement (need to discuss last section)

--- a/A1_Supervised/main3_MultiLayer.ipynb
+++ b/A1_Supervised/main3_MultiLayer.ipynb
@@ -428,7 +428,7 @@
    "source": [
     "#### **<span style=\"color:green\">Answer:</span>**\n",
     "\n",
-    "\\[ Your answers here \\]"
+    "When adding layers the effects of non-normalized input will worsen the deeper into the network you go. Each of the layers' weights are impacted by that of the previous layer, so when doing a lot of epochs over a lot of layers the effects stack. If some of the values are really large, you might get a diminishing gradient as the weights will need to be really small to balance this variable with the rest of the data."
    ]
   },
   {
