--- a/A3_Boosting/AdaBoost.ipynb
+++ b/A3_Boosting/AdaBoost.ipynb
@@ -171,7 +171,11 @@
    "source": [
     "#### **<span style=\"color:green\">Answer:</span>**\n",
     "\n",
-    "1. If a single weak classifier is predicting perfectly on the entire training set, none of the images are being incorrectly classified, meaning that the weights will not change on the next iteration nor will the next weak classifier. More weak classifiers may be trained, but the average strong classifier will give the same output as one single (perfect) weak classifier. Having a perfect weak classifier does not say much about the number of Haar-features. As long as there is a perfect split of image vs non-image along one of the Haar-features, we may have an infinite number of them and still get a perfect result on the weak classifier. The same goes for the number of training images.\n",
+    "1. A single weak classifier achieving perfect classification is likely a dream too good to be true. A zero error has the consequence that the $\\alpha$ for that weak classifier will be either very very big, or infinite (depending on the internals of the computations). In turn, the weights for all datapoints will be updated to 0. At this point, we can conclude that either the data is very simple, or the hyperparameters are problematic.\n",
+    "\n",
+    "    In the second case, one possible issue may be that we have trained such a long sequence of weak classifiers that the complete strong classifier has begun to overfit. We may also have included too many Haar-features in conjunction with too few training images, allowing the Haar-features to essentially encode the training images across the many weak classifiers.\n",
+    "\n",
+    "    One suggested remedy would thus be to limit the number of iterations in training (essentially the number of weak classifiers), and/or to decrease the number of Haar-features (if appropriate) and/or to increase the number of training images (if possible).\n",
     "\n",
     "2. If $\\varepsilon = 0.5$, $\\alpha$ will be equal to zero. This means that the weight update will just be a multiplication by 1, meaning the weights are staying the same. In this case, nothing changes, so training gets stuck."
    ]
@@ -1032,7 +1036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
